# hashgraph

./: .gitignore  README.md  default.nix  hashgraph.cabal
nix/: sources.json
src/Data/: Hashgraph.hs
src/test/: Main.hs
